Hide sticky nav until window is scrolled to prevent layout shifts

--- a/instapage/src/styles.scss
+++ b/instapage/src/styles.scss
@@ -1,11 +1,16 @@
 ::placeholder {
     opacity: 0.7 !important;
 }
-input:not(:placeholder-shown):not([aria-invalid=true]) {
+input:not(:placeholder-shown):not([aria-invalid="true"]) {
     border-color: #6ACCBA !important;
 }
 
-[data-sticky=true] {
+[data-sticky="true"] {
+
+    @at-root :not([style*="--scroll-top"]) & {
+        display: none;
+    }
+
     --threshold: 1000;
     --position: clamp(-100%, ( var(--scroll-top, 0) - var(--threshold, 1000) ) * 100%, 0%);
     position: fixed;
@@ -14,5 +19,5 @@ input:not(:placeholder-shown):not([aria-invalid=true]) {
     left: 0;
     width: 100%;
     transform: translateY(var(--position));
-    transition: all .2s ease;
+    transition: transform .2s ease;
 }
